<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/novo_contato"
    tools:context=".view.NovoContatoActivity">

    <EditText
        android:id="@+id/edittext_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/campo_nome"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/campo_telefone"
        android:inputType="numberDecimal"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_nome" />

    <EditText
        android:id="@+id/edittext_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/campo_celular"
        android:inputType="numberDecimal"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_telefone" />

    <Button
        android:id="@+id/button_salvar_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_celular" />

</androidx.constraintlayout.widget.ConstraintLayout>